--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-csv": "^2.1.9",
     "react-dom": "^16.10.1",
+    "sass": "^1.45.1",
     "webpack": "^4.44.1"
   },
   "devDependencies": {
